--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-overlays": "^5.2.1",
     "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
