--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.0",
     "react-overlays": "^5.2.1",
     "react-router-dom": "^7.5.3",
+    "react-spinners": "^0.17.0",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
